--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
 		"@types/bcrypt": "^5.0.0",
 		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.17",
+		"@types/jest": "^29.5.0",
 		"@types/node": "^18.15.11",
+		"@types/supertest": "^2.0.12",
 		"ts-node-dev": "^2.0.0",
-		"typescript": "^5.0.4"
+		"typescript": "^5.0.4",
+		"jest": "^29.2.2",
+		"ts-jest": "^29.0.3",
+		"sqlite3": "^5.1.2"
 	},
 	"dependencies": {
 		"@types/jsonwebtoken": "^9.0.1",
@@ -30,6 +35,7 @@
 		"jsonwebtoken": "^9.0.0",
 		"pg": "^8.10.0",
 		"reflect-metadata": "^0.1.13",
+		"supertest": "^6.3.3",
 		"typeorm": "^0.3.14",
 		"yup": "^0.32.11"
 	}
