--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
 		"@types/jest": "^29.5.0",
 		"@types/node": "^18.15.11",
 		"@types/supertest": "^2.0.12",
-		"typescript": "^5.0.4",
 		"jest": "^29.2.2",
 		"ts-jest": "^29.0.3",
 		"sqlite3": "^5.1.2"
@@ -37,6 +36,7 @@
 		"supertest": "^6.3.3",
 		"typeorm": "^0.3.14",
 		"yup": "^0.32.11",
-		"ts-node-dev": "^2.0.0"
+		"ts-node-dev": "^2.0.0",
+		"typescript": "^5.0.4"
 	}
 }
